contexte process_resume

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 requests
 python-dotenv
 pyaudio
+langchain
+langchain_community
+langchain_core
+langchain_openai
+sentence-transformers==2.2.2
+InstructorEmbedding
+langchain_groq
+
