--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mistralai/mistralai": "^0.4.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "eslint": "^8",
