--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@directus/sdk": "^16.0.2",
+    "@headlessui/react": "^2.0.4",
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
