--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "eslint": "^8",
