--- a/app/package.json
+++ b/app/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@directus/sdk": "^16.0.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@google-cloud/aiplatform": "^3.21.0",
     "@headlessui/react": "^2.0.4",
     "@mistralai/mistralai": "^0.4.0",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18.3.1",
