--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,11 @@
     "@headlessui/react": "^2.0.4",
     "@mistralai/mistralai": "^0.4.0",
     "@tailwindcss/forms": "^0.5.7",
+    "agent-base": "^7.1.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
