--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/aiplatform": "^3.21.0",
     "@headlessui/react": "^2.0.4",
     "@mistralai/mistralai": "^0.4.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "agent-base": "^7.1.1",
     "autoprefixer": "^10.4.19",
