--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "canvas": "^2.11.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
