--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@mistralai/mistralai": "^0.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@xenova/transformers": "^2.17.2",
     "agent-base": "^7.1.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
