--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "@directus/sdk": "^16.0.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@google-cloud/aiplatform": "^3.21.0",
     "@headlessui/react": "^2.0.4",
-    "@mistralai/mistralai": "^0.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "agent-base": "^7.1.1",
@@ -24,7 +22,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "yarn": "^1.22.22"
